# EmbeddableArchitecture

./: .gitignore  CMakeLists.txt  README.md
EATest/: CMakeLists.txt  EATest.cpp
EmbeddableArchitecture/: CMakeLists.txt  EmbeddableArchitecture.h  ExecutionManager.cpp  ExecutionManager.h  InstructionDispatcher.cpp  InstructionDispatcher.h  MemoryManager.cpp  MemoryManager.h  common.cpp  common.h
